fix(ux): Ensure scrollbar is visible on chats container for improved UX (#192)
- Fix the issue where the scrollbar was not visible on the chats container
- Ensure the scrollbar is always accessible, especially in long chats where scrolling to the top or bottom is necessary
- Improve user experience by making the scrollbar visually distinct and functional
- Test the changes to confirm the scrollbar is consistently visible and works as expected across all devices and browsers

Changes summary:
- Resolved the issue of the scrollbar not being visible on the chats container, which significantly impacted UX, especially in long chats. The scrollbar is now consistently visible and functional, ensuring users can easily navigate through chat content.

--- a/src/popup/scss/global/_base.scss
+++ b/src/popup/scss/global/_base.scss
@@ -26,33 +26,33 @@ body {
     // @include device(desk) {}
 }
 
-::-webkit-scrollbar {
-    width: $w-scrollbar; // desired scrollbar width 
-    height: 0 !important; // desired sbun crollbar height
-}
+// ::-webkit-scrollbar {
+//     width: $w-scrollbar; // desired scrollbar width 
+//     height: 0 !important; // desired sbun crollbar height
+// }
 
 /* scrollbar thumb */
-::-webkit-scrollbar-thumb,
-scrollbar-thumb {
-    background-color: rgba($accent, .5); // scrollbar thumb color
-    border-radius: $br-scrollbar; // roundness of the thumb
-}
+// ::-webkit-scrollbar-thumb,
+// scrollbar-thumb {
+//     background-color: rgba($accent, .5); // scrollbar thumb color
+//     border-radius: $br-scrollbar; // roundness of the thumb
+// }
 
 /* scrollbar track */
-::-webkit-scrollbar-track,
-scrollbar-track-piece {
-    background-color: rgba($accent, .2); // scrollbar track color
-    border-radius: $br-scrollbar;
-}
+// ::-webkit-scrollbar-track,
+// scrollbar-track-piece {
+//     background-color: rgba($accent, .2); // scrollbar track color
+//     border-radius: $br-scrollbar;
+// }
 
 /* scrollbar-color for For Firefox */
-@-moz-document url-prefix() {
-    html,
-    * {
-        scrollbar-color: rgba($accent, .5) rgba($accent, .2); // second parameter (transparent) is for bg-thumb
-        scrollbar-width: thin;
-    }
-}
+// @-moz-document url-prefix() {
+//     html,
+//     * {
+//         scrollbar-color: rgba($accent, .5) rgba($accent, .2); // second parameter (transparent) is for bg-thumb
+//         scrollbar-width: thin;
+//     }
+// }
 
 a {
     text-decoration: none;
