--- a/src/sass/abstract/_vars-gpth-layout.scss
+++ b/src/sass/abstract/_vars-gpth-layout.scss
@@ -3,7 +3,6 @@
 
     --min-w-btn: 5.5rem;
     --h-header: 60px;
-    --w-scrollbar: 0.365rem;
 
     --br: 1rem;
     --br-chat-bubble: calc(var(--br) * 1.9);
@@ -13,7 +12,6 @@
     --br-contextmenu: calc(var(--br) * 1.5);
     --br-pre: calc(var(--br) * 1.8);
     --br-tooltips: var(--br-btn);
-    --br-scrollbar: 50vw;
 
     --p: 0.725rem;
     --p-chat-bubble: 1rem;
